2017-11-02  Bruno Haible  <bruno@clisp.org>

	Skip a test that would request more space than available.
	* tests/lists153.tst: Disable huge allocation tests on 32-bit platforms
	with TYPECODES.

2017-11-02  Bruno Haible  <bruno@clisp.org>

	Fix a build failure with SINGLEMAP_MEMORY (regression from 2017-11-01).
	Reported by Don Cohen.
	* lispbibl.d (oint_addr_mask): Fix big mistake in expression.

2017-11-01  Bruno Haible  <bruno@clisp.org>

	Work around HP-UX cc crash.
	* makemake.in (XCFLAGS): Remove '-g' if we are using HP-UX cc.

2017-11-01  Bruno Haible  <bruno@clisp.org>

	Fix build failure when oint_type_shift has an unusual value.
	* lispbibl.d (mtypecode): Define a fallback when no optimized definition
	is possible.

2017-11-01  Bruno Haible  <bruno@clisp.org>

	Fix small problem in 2017-10-28 change.
	* lispbibl.d (oint_addr_mask): Make sure evaluation in preprocessor
	directives produces the right value.

2017-10-31  Bruno Haible  <bruno@clisp.org>

	Apply TRIVIALMAP's memory allocation also to the STACK area.
	* lispbibl.d (TRIVIALMAP_MEMORY_STACK): New macro. When it is defined,
	don't check oint_addr_mask against MALLOC_ADDRESS_RANGE.
	* spvw.d (init_memory) [TRIVIALMAP_MEMORY_STACK]: Allocate the stack
	range in [MAPPABLE_ADDRESS_RANGE_START, MAPPABLE_ADDRESS_RANGE_END],
	rather than through mymalloc.

2017-10-30  Bruno Haible  <bruno@clisp.org>

	Add early detection of a problem that would lead to crashes later.
	Seen on Linux/sparc64.
	* spvw.d (bits_used_by_range): New function.
	(init_memory): Verify that the range used for STACK is adequate.

2017-10-30  Bruno Haible  <bruno@clisp.org>

	Fix socket operations on native Windows (regression from 2011-07-19).
	Since we use the gnulib wrappers for socket operations, we must test
	errno, not WSAGetLastError().
	* win32aux.d (lowlevel_fd_read, fd_read, fd_write): Fix documentation.
	(do_sock_read): Use errno, not WSAGetLastError().
	(sock_read): Set errno, not WSAGetLastError().